# bashrs

./: .clippy.toml  .gitattributes  .gitignore  .pmat-gates.toml  .pmat-ignore  .pmat-metrics.toml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  BUGFIX_SUMMARY.md  CHANGELOG.md  CLAUDE.md  COMMAND_REFERENCE.md  CONTRIBUTING.md  CURRENT-STATUS-2025-10-19.md  CURRENT-STATUS.md.bak  Cargo.toml  DOGFOODING_RESULTS.md  DOGFOODING_SUCCESS.md  Dockerfile  EXTREME_QUALITY_IMPLEMENTATION.md  FIVE_WHYS_TEMPLATE.md  GEMINI.md  INDEX_QUALITY_DOCS.md  KNOWN_LIMITATIONS.md  MUTATION_BASELINE.md  MUTATION_TESTING_COMPARISON.md  Makefile  Makefile.tested.test.sh  Makefile.wasm  PMAT_RESULTS.md  PROJECT-STATE-2025-10-18-SPRINT-65.md  PROJECT-STATE-2025-10-18-SPRINT-66.md  PROJECT-STATE-2025-10-18.md  PROJECT-STATUS-v3.0.0.md  PROJECT-SUMMARY-2025-11-02.md  PROJECT_CONTEXT.md  QUALITY-IMPROVEMENTS.md  QUALITY_ENFORCEMENT.md  QUALITY_REVIEW_2025-10-09.md  QUALITY_SUMMARY.md  (+185 more)
bashrs-oracle/: Cargo.toml  README.md
bashrs-oracle/benches/: classification.rs
bashrs-oracle/src/: categories.rs  classifier.rs  corpus.rs  features.rs  lib.rs  lib_cont.rs  lib_cont_2.rs  lib_cont_3.rs  lib_cont_4.rs  lib_cont_5.rs  lib_cont_6.rs  lib_oracle.rs  lib_tests_oracle_creat.rs
bashrs-wasm/: Cargo.toml  shell-safety.html
bashrs-wasm/src/: lib.rs  wasm_encoder.rs  wasm_encoder_tests_gelu_zero.rs
bashrs-wasm/tests/: probar_shell_safety.rs
fuzz/: Cargo.toml  rust_keywords.dict
fuzz/fuzz_targets/: injection_detection.rs  transpile_robustness.rs
rash/: .cargo-mutants.toml  .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_COMPLETE.md  Makefile  T  all.html  build.rs  default_5282383699639748531_0_2065479.profraw  fn.check.html  fn.transpile.html  index.html  sidebar-items.js  ‮H🕴󫻅🕴
rash-mcp/: Cargo.toml  README.md  server.json
rash-mcp/src/: generated_contracts.rs  main.rs
rash-mcp/src/handlers/: installer.rs  installer_audit.rs  (+5 more)
rash-runtime/: Cargo.toml  build.rs
rash-runtime/src/: lib.rs  lib.sh
rash-tests/: Cargo.toml
rash-tests/src/: lib.rs  sandbox.rs
rash/.bashrs/: comply.toml
rash/.cargo/: config.toml
rash/.quality/: sprint27-complete.md
rash/ast/: fn.validate.html  index.html
rash/benches/: bash_purification_benchmarks.rs  fix_safety_bench.rs  lint_performance.rs  make_parsing_bench.rs  make_purify_bench.rs  makefile_benchmarks.rs  tracing_overhead.rs  transpilation.rs  validation.rs  verification.rs
rash/cli/: index.html
rash/compiler/: enum.CompressionLevel.html  enum.RuntimeType.html  enum.StripLevel.html  fn.compress_gzip.html  fn.create_self_extracting_script.html  index.html  sidebar-items.js  struct.BinaryCompiler.html
rash/container/: index.html  sidebar-items.js
rash/docs/: DOCKERFILE-TESTING-INDEX.md  DOCKERFILE-TESTING-PARITY-PLAN.md  DOCKERFILE-TESTING-QUICK-START.md  book-outline.md  test-generator-example.md  test-generator-guide.md  test-generator-implementation-summary.md
rash/emitter/: fn.emit.html  index.html
rash/examples/: baselines.rs  contract_validation.rs  conversation_generator.rs  cwe_mapping_demo.rs  evaluation_metrics.rs  explain_demo.rs  fast_classify_export.rs  generalization_tests.rs  installer_demo.rs  label_audit.rs  linting_demo.rs  makefile_purify_with_tests.rs  optimizer_benchmark.rs  quality_tools_demo.rs  safety_check.rs  sample_ci.sh  sample_deploy.sh  sample_zshrc.sh  shell_safety_classifier.rs  shellsafetybench.rs  ssc_data_pipeline.rs  ssc_report.rs  ssc_workflow.rs  tokenizer_validation.rs  transpiler_demo.rs  xtask_custom_build.rs
rash/formal/: index.html  sidebar-items.js
rash/formatter/: index.html  sidebar-items.js  struct.RashFormatter.html  trait.PreflightFormatter.html
rash/ir/: fn.constant_fold.html  fn.eliminate_dead_code.html  fn.from_ast.html  fn.optimize.html  fn.transform_ir.html  index.html  struct.IrConverter.html
rash/models/: index.html
rash/playbooks/: parser.yaml
rash/playground/: index.html
rash/services/: index.html
rash/setup-installer/: installer.toml
rash/src/: build_rs.rs  coverage_integration_tests.rs  coverage_integration_tests_a.rs  coverage_integration_tests_b.rs  coverage_integration_tests_incl2.rs  coverage_integration_tests_incl2_incl2.rs  coverage_integration_tests_incl2_incl2_incl2.rs  coverage_integration_tests_tests_lint.rs  coverage_integration_tests_tests_parse.rs  gates.rs  gates_tests_default_valu.rs  gates_tests_extracted.rs  gates_tests_extracted_gates.rs  generated_contracts.rs  lib.rs  stdlib.rs  stdlib_metadata.rs  transpiler.rs  transpiler_tests_extracted.rs  transpiler_tests_xtask_001.rs
rash/tests/: book_validation.rs  canonical_matrix_test.rs  canonical_matrix_test_matrix_prope.rs  cli_bench_tests.rs  cli_comply_tests.rs  cli_comply_tests_incl2.rs  cli_config_tests.rs  cli_dockerfile_integration.rs  cli_dockerfile_purify.rs  cli_dockerfile_purify_incl2.rs  cli_dockerfile_purify_incl2_incl2.rs  cli_dockerfile_purify_tests_dockerfile_2.rs  cli_error_handling_tests.rs  cli_error_handling_tests_main.rs  cli_installer_tests.rs  cli_integration.rs  cli_integration_incl2.rs  cli_integration_incl2_incl2.rs  cli_integration_tests_CLI_2.rs  cli_lint_changed_tests.rs  cli_lint_exit_codes_tests.rs  cli_lint_perf_tests.rs  cli_lsp_tests.rs  cli_make_formatting.rs  cli_make_lint.rs  cli_make_purify_with_tests.rs  cli_make_tests.rs  cli_make_tests_tests_CLI.rs  cli_property_tests.rs  cli_purify_tests.rs  cli_purify_tests_tests_PURIFY.rs  cli_purify_type_tests.rs  cli_purify_with_tests.rs  cli_repl_tests.rs  cli_score_trend_tests.rs  cli_sem003_tests.rs  cli_semantic_lint_tests.rs  cli_ssb_expansion_tests.rs  cli_ssc_tests.rs  cli_ssc_tests_incl2.rs  (+110 more)
rash/validation/: constant.IMPLEMENTED_RULES.html  enum.Severity.html  enum.ValidationLevel.html  fn.validate_shell_snippet.html  index.html  sidebar-items.js  struct.Fix.html  struct.ValidatedNode.html  struct.ValidationError.html  trait.ShellCheckValidation.html  trait.Validate.html
rash/verifier/: fn.verify.html  fn.verify_basic.html  fn.verify_paranoid.html  fn.verify_strict.html  index.html  sidebar-items.js
(+41497 files in other folders)
