[package]
name = "bashrs-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM bindings for bashrs shell safety linter (SSC v11 Phase 5)"
publish = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bashrs = { path = "../rash", default-features = false, features = ["minimal"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
# CodeBERT WASM classifier (requires WASM-002/004)
codebert = []
# Docker-based cross-browser tests (requires Docker)
docker = ["jugar-probar/docker"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
jugar-probar = { version = "1.0", default-features = false }

[[test]]
name = "probar_shell_safety"
path = "tests/probar_shell_safety.rs"
