[package]
name = "rash-mcp"
version = "1.0.0"
edition = "2021"
authors = ["PAIML Team"]
description = "MCP server for Rash (Rust-to-Shell transpiler)"
license = "MIT"
repository = "https://github.com/paiml/bashrs"
keywords = ["shell", "bash", "transpiler", "rust", "mcp"]
categories = ["command-line-utilities", "development-tools"]

[lints]
workspace = true

[dependencies]
bashrs = { version = "6.3.0", path = "../rash" }
pforge-runtime = "0.1.2"
# Use workspace dependencies for version unification (Issue #57)
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
# MCP-specific dependencies
schemars = "0.8"
async-trait = "0.1"

[dev-dependencies]
