[package]
name = "rash-mcp"
version = "1.0.0"
edition = "2021"
authors = ["PAIML Team"]
description = "MCP server for Rash (Rust-to-Shell transpiler)"
license = "MIT"
repository = "https://github.com/paiml/bashrs"
keywords = ["shell", "bash", "transpiler", "rust", "mcp"]
categories = ["command-line-utilities", "development-tools"]

# Local lint configuration for rash-mcp (pre-existing technical debt, not using workspace lints)
[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "allow"  # MCP handlers use pub for Handler trait impl
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
useless_format = "allow"  # String literals in format! are intentional for readability
expect_used = "allow"  # Handler implementations use expect for required fields

[dependencies]
bashrs = { version = "6.42", path = "../rash" }  # Use path for workspace dev, version for publish
pforge-runtime = "0.1.4"
# Use workspace dependencies for version unification (Issue #57)
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
# MCP-specific dependencies
schemars = "0.8"
async-trait = "0.1"
toml = "0.8"

[dev-dependencies]
