[package]
name = "bashrs-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Embedded runtime library for Rash-generated shell scripts"
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []

[lints]
workspace = true

[build-dependencies]
anyhow.workspace = true

[dependencies]
# This crate provides the embedded shell runtime