[package]
name = "bashrs"
version = "1.0.0-rc3"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "bashrs"
path = "src/bin/bashrs.rs"

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
blake3.workspace = true
once_cell.workspace = true
phf.workspace = true
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"  # Added for testing module
static_assertions = "1.1"

# Compile mode dependencies
zstd = "0.13"
tar = "0.4"
flate2 = "1.1"
base64 = "0.22"

# Playground dependencies (removed from v1.0 - will be moved to separate rash-playground crate)
# ratatui = { version = "0.29", default-features = false, features = ["crossterm"], optional = true }
# ropey = { version = "1.6", optional = true }
# tree-sitter = { version = "0.25", optional = true }
# tree-sitter-rust = { version = "0.23", optional = true }
# syntect = { version = "5.1", default-features = false, features = ["parsing"], optional = true }
# crossbeam = { version = "0.8", optional = true }
# dashmap = { version = "6.1", optional = true }
# petgraph = { version = "0.8", optional = true }
# rayon = { version = "1.10", optional = true }
# brotli = { version = "8.0", optional = true }
# simdutf8 = { version = "0.1", optional = true }
# bit-vec = { version = "0.8", optional = true }
# lru = { version = "0.14", optional = true }

# Optional dependencies for feature gates (commented out for now)
# z3 = { version = "0.12", optional = true }
# mutagen = { version = "0.2", optional = true }
# libfuzzer-sys = { version = "0.4", optional = true }

[features]
# Default includes core features for full functionality
default = ["validation", "pretty-errors", "basic", "compile"]
# Minimal build for smallest binary size (<3MB)
minimal = []
# Full build with all features (~6MB)
full = ["pattern-matching", "loops", "verification", "optimization", "lsp", "completions", "watch", "compile"]
# Individual features
basic = []
compile = []  # Binary compilation and self-extracting scripts
pattern-matching = []
loops = []
verification = []  # ["z3"] when available
optimization = []
validation = []
pretty-errors = []
lsp = []
completions = []
watch = []
# playground = ["ratatui", "ropey", "tree-sitter", "tree-sitter-rust", "crossbeam", "dashmap", "petgraph", "rayon", "brotli", "simdutf8", "bit-vec", "lru"]  # Removed from v1.0 - move to separate crate
# mutation-testing = ["mutagen"] when available
# fuzzing = ["libfuzzer-sys"] when available

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true
proptest.workspace = true
rstest.workspace = true
assert_cmd = "2.0"
predicates = "3.1"

[[bench]]
name = "transpilation"
harness = false

[[bench]]
name = "verification"
harness = false

# Note: The actual Rash examples are in the examples/ directory
# They are written in Rash syntax and must be transpiled, not compiled
# See examples/README.md for usage instructions

